--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,44 @@
 [tool.poetry]
-name = "openkat"
-version = "0.1.0"
+name = "py-openkat"
+version = "0.1.4a3"
 description = ""
 authors = ["Donny Peeters <donny.peeters@hotmail.com>"]
 readme = "README.md"
 packages = [{ include = "openkat" }]
+include  = ["openkat/*.py"]
+exclude = [
+    "openkat/bytes",
+    "**/.idea",
+    "**/alembic",
+    "**/node_modules",
+    "**/packaging",
+    "**/export_migrations",
+    "**/migrations",
+    "**/docs",
+    "**/.git*",
+    "**/.*ignore",
+    "**/.nvmrc",
+    "**/.sassrc",
+    "**/.djlintrc",
+    "**/.editorconfig",
+    "**/Dockerfile",
+    "**/Makefile",
+    "**/alembic.ini",
+    "**/base.yml",
+    "**/__pycache__",
+    "**/.parcel-cache",
+    "openkat/**/README.md",
+    "openkat/roeltje",
+    "openkat/**/Readme.md",
+    "openkat/**/*env-dist",
+    "openkat/**/.ci",
+    "openkat/**/LICENSE",
+    "openkat/**/requirements*.txt",
+    "openkat/**/yarn.lock",
+    "openkat/**/tests",
+    "openkat/OOI_database_seed.json",
+    "openkat/package.json",
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -18,13 +52,13 @@ django-password-validators = ">=1.7.0"
 ares = ">=0.7.1"
 beautifulsoup4 = ">=4.11.1"
 cwe = ">=1.6"
-xhtml2pdf = ">=0.2.5"
-dnspython = ">=2.1.0,<2.2.0"
+dnspython = ">=2.1.0"
 phonenumbers = "^8.12.55"
 colorama = ">=0.4.5"
 SQLAlchemy = "^1.4.41"
 mmh3 = "^3.0.0"
 alembic = "^1.8.1"
+python-gettext = "^4.1"
 
 
 [build-system]
